2009-07-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/opencv/OpenCVGrabber.cpp: use CV_CAP_ANY,
	"any" camera is 0 rather than -1 now (thanks Sebastien Gay).

	* src/libYARP_OS/src/HttpCarrier.cpp: silly bug in http
	interface to ports, "send data" form used wrong IP (thanks
	Stephane Lallee).

	* example/swig/CMakeLists.txt: update module name in csharp,
	to make Windows happy (thanks Stephane Lallee).

2009-07-27  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/ResourceFinder.h: reveal
	inadvertently hidden Searchable::check() methods (thanks
	to Jonas Ruesch for pointing out problem).

2009-07-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Bottle.cpp: remove incorrect return on
	void method (thanks to David Vernon).

2009-07-21  Arjan Gijsberts  <arjan@liralab.it>

	* src/libYARP_math/src/math.cpp
	* src/libYARP_math/include/yarp/math/Math.h
	* src/libYARP_math/harness/MathTest.cpp
	Added 'luinv' function for square matrix inversion using LU decomposition.
	Added 'chinv' function for positive definite matrix inversion using 
	Cholesky decomposition. This function depends on GSL 1.12 and is commented 
	out until this version is installed on most target machines.

2009-07-07 Lorenzo Natale <nat@robotcub.org>
	* src/libYARP_dev/src/include/yarp/dev/ControlBoardInterfaces.h
        * src/libYARP_dev/dev/src/RemoteControlBoard.cpp:
	cleaned code and added IControlMode interface, ITorqueControl
        IControlModeRaw, ITorqueControlRaw

2009-07-03  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/PortCore.cpp: fix administration interface
	bug when listing inputs and outputs - access to the connections
	wasn't thread-safe, and could fail if connections were
	simultaneously added/removed.  Thanks to Alejandro R. Mosteo for
	bug report #2801261.

2009-07-01  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/BottleImpl.h: fix