@@ -1,3 +1,10 @@
+2009-08-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_sig/include/yarp/sig/Image.h: include a warning
+	to the Image::wrapIplImage method about the required object 
+	lifetime, and how this interacts with ports (thanks Bruno
+	Nery).
+
 2009-07-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* src/modules/opencv/OpenCVGrabber.cpp: use CV_CAP_ANY,
